<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">

    <item
        android:id="@+id/item_sobre"
        android:title="@string/item_sobre"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_configuracoes"
        android:title="@string/item_configuracoes"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_atualizar"
        android:title="@string/item_atualizar"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh"/>

</menu>